@@ -1,8 +1,6 @@
 use Red;
 use Test;
 
-plan :skip-all("Different driver setted ($_)") with %*ENV<RED_DATABASE>;
-
 model Bla{ has Str $.id is id }
 model Ble{ has Str $.other-name is id }
 
