@@ -3,8 +3,6 @@ use Red;
 use Red::Driver::SQLite;
 use Test;
 
-plan :skip-all("Different driver setted ($_)") with %*ENV<RED_DATABASE>;
-
 model Bla { has UInt $.id is serial }
 
 throws-like {
