@@ -18,9 +18,13 @@ model Ble {
     has Int  $.value  is column;
 }
 
-my $*RED-DB    = database "SQLite", |(:database($_) with %*ENV<RED_DATABASE>);
-#my $*RED-DEBUG = True;
-Bla.^create-table; Ble.^create-table;
+my $*RED-DEBUG          = $_ with %*ENV<RED_DEBUG>;
+my $*RED-DEBUG-RESPONSE = $_ with %*ENV<RED_DEBUG_RESPONSE>;
+my @conf                = (%*ENV<RED_DATABASE> // "SQLite").split(" ");
+my $driver              = @conf.shift;
+my $*RED-DB             = database $driver, |%( @conf.map: { do given .split: "=" { .[0] => val .[1] } } );
+
+schema(Bla, Ble).drop.create;
 
 Bla.^create: :ble[{ :1value }, { :2value }, { :3value }];
 
