@@ -1,6 +1,7 @@
 Revision history for Red
 
 {{$NEXT}}
+    - fix schema.create
 
 0.1.58  2022-04-10T23:01:15+01:00
     - add `is sub-model` to `subset`
